service.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpd-service
spec:
  type: ClusterIP    
  selector:
    app: httpd
  ports:
    - port: 80
      targetPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  type: ClusterIP    
  selector:
    app: nginx
  ports:
    - port: 80
      targetPort: 80
